preparing to the public

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,8 +1,16 @@
-;
+; The configuration file is parsed in the common.inc, and variables 
+; are stored in the global variable $CFG. 
 ;
 
-[general]
-;
+[dns.php]
+; The location of the nsupdate executable is stored in the global variable 
+; $CFG->nsupdate and used in the dns.php script 
 nsupdate = /usr/bin/nsupdate
-;
-server = dyndns.elru.gr
+
+[client.php]
+; Define the domain of the server. This must be the domain of the URLs: 
+;   http://<server>/ip.php and 
+;   http://<server>/dns.php
+; This variable is stored in the global variable $CFG->server and is used in 
+; the client.php script
+;server = dyndns.mydomain.org
