--- a/conf/zones.ini
+++ b/conf/zones.ini
@@ -1,39 +1,21 @@
+; The zone configuration file contains the necessary configuration information 
+; for the specific zones that will be pushed to the named server through the 
+; nsupdate command. The configuration file is parsed in the common.inc, and zones 
+; are stored in the global variable $CFG->zones. The dns.php script reads this 
+; global variable and generates the appropriate nsupdate commands based on its 
+; contents
+; 
+; The domain of each zone is defined as a section, i.e., inside []. 
+; The subdomains are defined as elements of subdomains[]. 
+; If there is a need to dynamically update the main domain, then the special 
+; setting named setDomain must be set to 'true'.
 ;
-;
-[elru.gr]
-subdomains[] = teivos
-subdomains[] = temp
-subdomains[] = mixgrill
-subdomains[] = judi
-subdomains[] = photo
-subdomains[] = ftp
-subdomains[] = teivoscms
-subdomains[] = checkpoints
-subdomains[] = thesiseap
-subdomains[] = maridora
-subdomains[] = kostas-maridora-book
-subdomains[] = exelixis
-subdomains[] = teletraffic
-subdomains[] = ehlja
-subdomains[] = torrelay
-subdomains[] = fek
-subdomains[] = openjscad
-subdomains[] = vipr
-subdomains[] = olena-rabota
-subdomains[] = 95a
-subdomains[] = khusainov
-subdomains[] = audiopedia
-
-
-[creajob.com]
-setDomain = 'true'
-subdomains[] = www
-
-[aslanidisalexios.gr]
-setDomain = 'true'
-subdomains[] = www
-
-[nmsecurity.gr]
-setDomain = 'true'
-subdomains[] = www
-subdomains[] = www2
+; Example
+; [domain.org]
+; subdomains[] = www
+; subdomains[] = tmp
+; subdomains[] = test
+; 
+; [otherdomain.org]
+; setDomain = 'true'
+; subdomains[] = www
